# catlass

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  OAT.xml  OWNERS  README.md  SECURITYNOTE.md
examples/: CMakeLists.txt
examples/00_basic_matmul/: CMakeLists.txt  README.md  basic_matmul.cpp
examples/01_batched_matmul/: CMakeLists.txt  README.md  batched_matmul.cpp
examples/01_grouped_matmul/: CMakeLists.txt  README.md  grouped_matmul.cpp
examples/02_grouped_matmul_m/: CMakeLists.txt  README.md  grouped_matmul_m.cpp
examples/02_grouped_matmul_slice_m/: CMakeLists.txt  README.md  grouped_matmul_slice_m.cpp
examples/02_optimized_matmul/: CMakeLists.txt  optimized_matmul.cpp
examples/03_matmul_add/: CMakeLists.txt  README.md  matmul_add.cpp
examples/04_padding_matmul/: CMakeLists.txt  README.md  padding_matmul.cpp
examples/05_fa/: CMakeLists.txt  README.md  fa_kernel.cpp  gen_data.py  main.cpp
examples/05_grouped_matmul_slice_k/: CMakeLists.txt  README.md  grouped_matmul_slice_k.cpp
examples/06_optimized_matmul/: CMakeLists.txt  README.md  optimized_matmul.cpp
examples/07_grouped_matmul_m_per_token_dequant/: CMakeLists.txt  README.md  grouped_matmul_m_per_token_dequant.cpp
examples/07_grouped_matmul_slice_m_per_token_dequant/: CMakeLists.txt  README.md  grouped_matmul_slice_m_per_token_dequant.cpp
examples/07_grouped_matmul_slice_m_per_token_dequant_moe/: CMakeLists.txt  README.md  grouped_matmul_slice_m_per_token_dequant_moe.cpp
examples/08_grouped_matmul/: CMakeLists.txt  README.md  grouped_matmul.cpp
examples/09_splitk_matmul/: CMakeLists.txt  README.md  splitk_matmul.cpp
examples/102_dynamic_optimized_matmul/: CMakeLists.txt  README.md  dynamic_optimized_matmul.cpp
examples/102_dynamic_optimized_matmul/include/: do_tiling_b16.h  dynamic_optimized_matmul.h  platform_info.h  select_kernel_b16.h  tiling_params.h  utils.h
examples/10_grouped_matmul_m_per_token_dequant_bf16/: CMakeLists.txt  grouped_matmul_m_per_token_dequant_bf16.cpp
examples/10_grouped_matmul_slice_m_per_token_dequant/: CMakeLists.txt  README.md  grouped_matmul_slice_m_per_token_dequant.cpp
examples/10_grouped_matmul_slice_m_per_token_dequant_bf16/: CMakeLists.txt  grouped_matmul_slice_m_per_token_dequant_bf16.cpp
examples/11_grouped_matmul_k_per_token_dequant_bf16/: CMakeLists.txt  grouped_matmul_k_per_token_dequant_bf16.cpp
examples/11_grouped_matmul_slice_k_per_token_dequant/: CMakeLists.txt  README.md  grouped_matmul_slice_k_per_token_dequant.cpp
examples/11_grouped_matmul_slice_k_per_token_dequant_bf16/: CMakeLists.txt  grouped_matmul_slice_k_per_token_dequant_bf16.cpp
examples/12_quant_matmul/: CMakeLists.txt  README.md  quant_matmul.cpp
examples/13_basic_matmul_tla/: CMakeLists.txt  README.md  basic_matmul.cpp  basic_matmul_tla.cpp
examples/14_optimized_matmul_tla/: CMakeLists.txt  README.md  optimized_matmul.cpp  optimized_matmul_tla.cpp
examples/15_gemm/: CMakeLists.txt  README.md  gemm.cpp
examples/15_mla/: CMakeLists.txt  README.md  gen_data.py  main.cpp  mla_kernel.cpp
examples/16_group_gemm/: CMakeLists.txt  README.md  group_gemm.cpp
examples/16_grouped_matmul_k/: CMakeLists.txt  README.md  grouped_matmul_k.cpp
examples/16_grouped_matmul_slice_k/: CMakeLists.txt  README.md  grouped_matmul_slice_k.cpp
examples/17_gemv_aiv/: CMakeLists.txt  README.md  gemv_aiv.cpp
examples/18_gemv_aic/: CMakeLists.txt  README.md  gemv_aic.cpp
examples/19_mla/: CMakeLists.txt  README.md  gen_data.py  kernel_common.hpp  mla.cpp  mla.md  mla_kernel.cpp  mla_kernel_tp1_spec.cpp  mla_tiling.cpp  mla_tiling.h
examples/20_matmul_bias/: CMakeLists.txt  README.md  matmul_bias.cpp
examples/21_basic_matmul_preload_zN/: CMakeLists.txt  README.md  basic_matmul_preload_zN.cpp
examples/22_padding_splitk_matmul/: CMakeLists.txt  README.md  padding_splitk_matmul.cpp
examples/23_flash_attention_infer/: CMakeLists.txt  README.md  fai.cpp  fai_kernel.cpp  fai_tiling.cpp  gen_data.py  kernel_common.hpp
examples/24_conv_bias/: CMakeLists.txt  README..md  README.md  conv_bias.cpp  gen_data.py
examples/25_matmul_full_loadA/: CMakeLists.txt  README.md  matmul_full_loadA.cpp
examples/26_matmul_relu/: CMakeLists.txt  README.md  matmul_relu.cpp
examples/27_matmul_gelu/: CMakeLists.txt  README.md  matmul_gelu.cpp
examples/28_matmul_swish/: CMakeLists.txt  README.md  matmul_swish.cpp
examples/29_a2_fp8_e4m3_matmul/: CMakeLists.txt  README.md  fp8_matmul.cpp  gen_data.py
examples/30_w8a16_matmul/: CMakeLists.txt  README.md  w8a16_matmul.cpp
examples/31_small_matmul/: CMakeLists.txt  README.md  small_matmul.cpp
examples/32_w4a8_matmul/: CMakeLists.txt  README.md  gen_data.py  w4a8.cpp
examples/33_basic_conv2d/: CMakeLists.txt  README.md
examples/34_single_core_splitk_matmul/: CMakeLists.txt  README.md  Readme.md  single_core_splitk.cpp
examples/35_w4a8_grouped_matmul_msd/: gen_data.py
examples/36_w4a8_matmul_msd/: gen_data.py
examples/38_w4a4_matmul/: CMakeLists.txt  README.md  w4a4_matmul.cpp
examples/advanced/basic_matmul_aclnn/: CMakeLists.txt  README.md
examples/common/: bfloat16.h  fp16_t.h  golden.hpp  helper.hpp  options.hpp
examples/common/golden/: compare_data.hpp  fill_data.hpp  matmul.hpp
examples/lib_cmake/: CMakeLists.txt  main.cpp  usage.md
examples/lib_cmake/impl/: CMakeLists.txt  matmul_add.cpp
examples/python_extension/: AscendCTKernelWrapper.cpp  AscendCTKernelWrapper.h  AscendCT_kernel_wrapper.cpp  CMakeLists.txt  PybindBindings.cpp  README.md  TorchBindings.cpp  act_kernel_wrapper.cpp  act_kernel_wrapper.h  actlass_kernel_wrapper.h  pybind_bindings.cpp  pyproject.toml  set_env.sh  setup.py  test_python_extension.py  torch_bindings.cpp  usage.md
examples/python_extension/tests/: test_python_extension.py
examples/python_extension/torch_act/: __init__.py
examples/python_extension/torch_catlass/: __init__.py
examples/shared_lib/: AscendCTKernel.cpp  AscendCTKernel.h  AscendCT_kernel.cpp  CMakeLists.txt  README.md  act_kernel.cpp  act_kernel.h  actlass_kernel.cpp  actlass_kernel.h  build.sh  usage.md
(+571 files in other folders)
